--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,18 +1,10 @@
-# The following workflow provides an opinionated template you can customize for your own needs.
-#
-# If you are not an Octopus user, the "Push to Octopus", "Generate Octopus Deploy build information",
-# and "Create Octopus Release" steps can be safely deleted.
-#
-# To configure Octopus, set the OCTOPUS_API_TOKEN secret to the Octopus API key, and
-# set the OCTOPUS_SERVER_URL secret to the Octopus URL.
-#
-# Double check the "project" and "deploy_to" properties in the "Create Octopus Release" step
-# match your Octopus projects and environments.
-#
-# Get a trial Octopus instance from https://octopus.com/start
-
 name: Go Build
-on: [push]
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - "*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -70,6 +62,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
+        flavor: latest=true
         images: |
           ghcr.io/${{ github.repository }}
     - name: Build and push Docker images
